added pictures, structured background and add html

--- a/index.html
+++ b/index.html
@@ -5,25 +5,40 @@
     <meta charset="uft-8">
     <meta name="description" content="Dennis Gonzalez">
     <title>Dennis E. Gonzalez</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css"
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   </head>
 
   <body>
 
     <header>
       <nav>
-        <h3 class="nav-title">Your next PM?</h3>
+        <h3 class="nav-title">Next Digital Surgeon</h3>
         <div class="main-nav">
-        <ul class="nav-links">
-          <li><a href="index.html">home</a></h1>
-          <li><a href="stories.html">stories about me</a></h1>
-          <li><a href="dogs.html">pictures of dogs!</a></li>
-        </ul>
-      </div>
+          <ul class="nav-links">
+            <li><a href="index.html">home</a></h1>
+            <li><a href="stories.html">stories about me</a></h1>
+            <li><a href="dogs.html">pictures of dogs!</a></li>
+          </ul>
+        </div>
       </nav>
-
     </header>
 
+  <main class="main">
+      <h1><span>Project</span>ing innovation<span> //</span></h1>
+      <h3>with</h3>
+      <h1><span>Manager</span>ial experience<span> //</span></h1>
+  </main>
+
+  <section class="facts">
+    <img src="resources/images/ai-art-big-data-158826.jpg" alt="pic" class="lights-pic">
+    <div class="why-me">
+      <h3>Why hire me?</h3>
+    </div>
+  </section>
+
   </body>
+
+
 
 </html>
