add navbar to stories.html

--- a/stories.html
+++ b/stories.html
@@ -1,1 +1,29 @@
-<h1>The first of the stories</h1>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="uft-8">
+    <meta name="description" content="Dennis Gonzalez">
+    <title>Dennis E. Gonzalez</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <header>
+      <nav>
+        <h3 class="nav-title">Next Digital Surgeon</h3>
+        <div class="main-nav">
+          <ul class="nav-links">
+            <li><a href="index.html">home</a></h1>
+            <li><a href="stories.html">stories about me</a></h1>
+            <li><a href="dogs.html">pictures of dogs!</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+  </body>
+
+</html>
