--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div class="why-me">
       <h3>Why hire me?</h3>
     </div>
+
+    <div class="about-me">
+      <p class="reasons">reasons //</p>
+    </div>
   </section>
 
   </body>
