added ion icon file for icons, add vendors folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Dennis Gonzalez">
     <title>Dennis E. Gonzalez</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   </head>
 
@@ -37,7 +38,11 @@
     </div>
 
     <div class="about-me">
-      <p class="reasons">reasons //</p>
+      <p class="reasons-tag">reasons //</p>
+
+      <h1>i can embody the tech PM role because:</h1>
+
+      <p class="reasons"><p>
     </div>
   </section>
 
