alot of css styling and location setting, add gridd css for easier spacing of objects

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dennis E. Gonzalez</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   </head>
 
@@ -32,17 +33,47 @@
   </main>
 
   <section class="facts">
-    <img src="resources/images/ai-art-big-data-158826.jpg" alt="pic" class="lights-pic">
-    <div class="why-me">
-      <h3>Why hire me?</h3>
+    <div class="row">
+      <div class="col span-1-of-2 lights-pic">
+        <img src="resources/images/ai-art-big-data-158826.jpg" alt="pic">
+      </div>
+        <div class="col span-2-of-3 why-me">
+          <h3>Why hire me?</h3>
+        </div>
+
+      <div class="about-me">
+        <p class="reasons-tag">reasons //</p>
+
+        <h1>i can embody the values of Digital Surgeons because:</h1>
+
+        <p class="reasons">Reason example, this is not real, it's simply for testing purposes<p><div class="arrow"><a><i class="ion-chevron-right"></i></a></div>
+      </div>
     </div>
+  </section>
 
-    <div class="about-me">
-      <p class="reasons-tag">reasons //</p>
-
-      <h1>i can embody the tech PM role because:</h1>
-
-      <p class="reasons"><p>
+  <section class="section-testimonials">
+    <div class="row">
+      <h2>But don't take my word for it</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+        <blockquote>
+          He's a pretty good cook, and he manages our household pretty well, also he paid me $20 to say nice things.
+          <cite>Stacey(my wife)</cite>
+        </blockquote>
+      </div>
+      <div class="col span-1-of-3">
+        <blockquote>
+          Testimonial number 2
+          <cite>Joana Silva</cite>
+        </blockquote>
+      </div>
+      <div class="col span-1-of-3">
+        <blockquote>
+          Testimonial number 3
+          <cite>Milton Chapman</cite>
+        </blockquote>
+      </div>
     </div>
   </section>
 
