added javascript to cycle through reasons

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="about-me">
         <p class="reasons-tag">reasons //</p>
 
-        <h1>i can embody the values of Digital Surgeons because:</h1>
+        <h1>I can embody the values of Digital Surgeons because:</h1>
 
-        <p class="reasons">Reason example, this is not real, it's simply for testing purposes<p><div class="arrow"><a><i class="ion-chevron-right"></i></a></div>
+        <p class="reasons">I never cease exploring, or learning. It brought me to studying programming! This gave me the technical aptitude to build small applications and pages, like this one! So I understand what it takes to build, describe and test them.<p><div class="arrow"><a><i class="ion-chevron-right"></i></a></div>
       </div>
     </div>
   </section>
@@ -76,6 +76,9 @@
       </div>
     </div>
   </section>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="resources/js/script.js"></script>
 
   </body>
 
