add stories.js add html and style for stories page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           <ul class="nav-links">
             <li><a href="index.html">home</a></h1>
             <li><a href="stories.html">stories about me</a></h1>
-            <li><a href="dogs.html">pictures of dogs!</a></li>
           </ul>
         </div>
       </nav>
@@ -53,18 +52,18 @@
 
   <section class="section-testimonials">
     <div class="row">
-      <h2>But don't take my word for it</h2>
+      <h2>But don't take my word for it...</h2>
     </div>
     <div class="row">
       <div class="col span-1-of-3">
         <blockquote>
-          He's a pretty good cook, and he manages our household pretty well, also he paid me $20 to say nice things.
-          <cite>Stacey(my wife)</cite>
+          He's a pretty good cook, and he manages our household pretty well. He's also kind of funny. 10/10 would marry again.
+          <cite>Stacey (my wife)</cite>
         </blockquote>
       </div>
       <div class="col span-1-of-3">
         <blockquote>
-          Testimonial number 2
+          Dennis is a pretty funny, handsome guy.
           <cite>Joana Silva</cite>
         </blockquote>
       </div>
@@ -77,8 +76,30 @@
     </div>
   </section>
 
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+          <li><a href="https://independnt.github.io/" target="_blank">Blog</a></li>
+        </ul>
+      </div>
+      <div class="col span-1-of-2">
+        <ul class="social-icons">
+          <li><a href="https://www.facebook.com/Independnt" target="_blank"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/dennis-gonzalez-991b5529/" target="_blank"><i class="ion-social-linkedin-outline"></i></a></li>
+          <li><a href="https://github.com/independnt"><i class="ion-social-github"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <p>
+        Made with &hearts; by Dennis.
+      </p>
+    </div>
+  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="resources/js/script.js"></script>
+  <script src="resources/js/main.js"></script>
 
   </body>
 
