--- a/stories.html
+++ b/stories.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Dennis Gonzalez">
     <title>Dennis E. Gonzalez</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   </head>
 
@@ -23,6 +24,19 @@
         </div>
       </nav>
     </header>
+
+    <main class="main">
+        <h1>Get to know me a little better. These are stories about me!</h1>
+    </main>
+
+    <section>
+      <div class="stories">
+        <p class="story">I never cease exploring, or learning. It brought me to studying programming! This gave me the technical aptitude to build small applications and pages, like this one! So i understand what it takes to build, describe and test them.</p><div class="story-arrow"><a><i class="ion-chevron-right"></i></a>
+      </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="resources/js/stories.js"></script>
 
   </body>
 
