added more to stories and stories.js

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       </div>
       <div class="col span-1-of-3">
         <blockquote>
-          Dennis is a pretty funny, handsome guy.
-          <cite>Joana Silva</cite>
+          During the time I managed Dennis at GigMasters, I found him to be open, respectful and humble to his coworkers and clients we served. He has always been good at dealing with situations which are not easily solved.
+           <cite>Kevin Kinyon</cite>
         </blockquote>
       </div>
       <div class="col span-1-of-3">
         <blockquote>
-          Testimonial number 3
+          Having Dennis as my boss
           <cite>Milton Chapman</cite>
         </blockquote>
       </div>
