--- a/stories.html
+++ b/stories.html
@@ -19,7 +19,6 @@
           <ul class="nav-links">
             <li><a href="index.html">home</a></h1>
             <li><a href="stories.html">stories about me</a></h1>
-            <li><a href="dogs.html">pictures of dogs!</a></li>
           </ul>
         </div>
       </nav>
@@ -31,7 +30,7 @@
 
     <section>
       <div class="stories">
-        <p class="story">I never cease exploring, or learning. It brought me to studying programming! This gave me the technical aptitude to build small applications and pages, like this one! So i understand what it takes to build, describe and test them.</p><div class="story-arrow"><a><i class="ion-chevron-right"></i></a>
+        <p class="story">I was once kidnapped by a taxi driver. No, seriously. I was going home with some friends after a long night, planning to pay with a card, because its 2018, and you would think that isn't a problem. The driver proceeds to tell us that cards are not accepted passed 1:30 am, which is bulls*it. When we tried to get out, he floored it. And drove us around at fast speeds so we couldn't jump out of the vehicle. It was a wild ride.</p><div class="story-arrow"><a><i class="ion-chevron-right"></i></a>
       </div>
     </section>
 
