--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="col span-1-of-3">
         <blockquote>
           During the time I managed Dennis at GigMasters, I found him to be open, respectful and humble to his coworkers and clients we served. He has always been good at dealing with situations which are not easily solved.
-           <cite>Kevin Kinyon</cite>
+           <cite>Kevin Kinyon (Founder - GigMasters.com)</cite>
         </blockquote>
       </div>
       <div class="col span-1-of-3">
