--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </div>
       <div class="col span-1-of-3">
         <blockquote>
-          Having Dennis as my boss
-          <cite>Milton Chapman</cite>
+          I've been priveleged to work with a few people who give 100% on their team, and Dennis is one of them. A leader shows the way to succeed; Dennis does it while walking away from an explosion playing air guitar.
+          <cite>Kimberly Lepper (Former Account Specialist - GigMasters.com)</cite>
         </blockquote>
       </div>
     </div>
